@@ -220,6 +220,8 @@ _elm_popup_smart_theme(Evas_Object *obj)
 
    _mirrored_set(obj, elm_widget_mirrored_get(obj));
 
+   elm_object_style_set(sd->notify, elm_widget_style_get(obj));
+
    if (sd->button_count)
      {
         snprintf(buf, sizeof(buf), "buttons%u", sd->button_count);
